[CGOV-2537] - Fixed floating problem causing white space issue on bio pages.

--- a/DCEG/Stylesheets/baseline.css
+++ b/DCEG/Stylesheets/baseline.css
@@ -1788,7 +1788,7 @@ ol li.genSearchItem {
 
 }
 
-.dceg-bio-content{ clear:both;}
+.dceg-bio-content{ clear:left;}
 
 .bio-img {margin-right: 20px; float:left; width:162px;}
 
